--- a/galaxy star classifier.ipynb
+++ b/galaxy star classifier.ipynb
@@ -2,40 +2,167 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch\n",
     "from torchvision import datasets, transforms\n",
-    "from torch.utils.data import DataLoader"
+    "from torch.utils.data import DataLoader, random_split\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((150, 150)),\n",
     "    transforms.ToTensor(),\n",
+    "    transforms.Grayscale(num_output_channels=1),\n",
+    "    transforms.RandomRotation(30),\n",
     "    transforms.Normalize((0.5,), (0.5))\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = datasets.ImageFolder(\"data\", transform=transform)"
+    "dataset = datasets.ImageFolder(root=\"data\", transform=transform)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset ImageFolder\n",
+       "    Number of datapoints: 3985\n",
+       "    Root location: data\n",
+       "    StandardTransform\n",
+       "Transform: Compose(\n",
+       "               ToTensor()\n",
+       "               Grayscale(num_output_channels=1)\n",
+       "               RandomRotation(degrees=[-30.0, 30.0], interpolation=nearest, expand=False, fill=0)\n",
+       "               Normalize(mean=(0.5,), std=0.5)\n",
+       "           )"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "totalsize = len(dataset)\n",
+    "train_size = int(0.7 * totalsize)\n",
+    "val_size = int(0.15 * totalsize)\n",
+    "test_size = totalsize - train_size - val_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "597"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df, val_df, test_df = random_split(dataset,[train_size, val_size, test_size])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = DataLoader(train_df, batch_size=32, shuffle=True)\n",
+    "val_loader = DataLoader(train_df, batch_size=32, shuffle=False)\n",
+    "test_loader = DataLoader(train_df, batch_size=32, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 2789, Validation: 597, Test: 599\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Train: {len(train_df)}, Validation: {len(val_df)}, Test: {len(test_df)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNN(nn.Module):\n",
+    "    def __init__(self, num_classes):\n",
+    "        super(CNN, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=3, padding=1)\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
+    "        self.fc1 = nn.Linear(64 * 16 * 16, 128)\n",
+    "        self.fc2 = nn.Linear(128, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = x.view(-1, 64 * 37 * 37)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
