--- a/galaxy star classifier.ipynb
+++ b/galaxy star classifier.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchvision import datasets, transforms\n",
+    "import torch\n",
+    "from torchvision import datasets\n",
+    "from torchvision.transforms import v2\n",
     "from torch.utils.data import DataLoader, random_split\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F"
@@ -14,21 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Grayscale(num_output_channels=1),\n",
-    "    transforms.RandomRotation(30),\n",
-    "    transforms.Normalize((0.5,), (0.5))\n",
+    "transform = v2.Compose([\n",
+    "    v2.Grayscale(num_output_channels=1),\n",
+    "    v2.Resize((128, 128)),\n",
+    "    v2.ToImage(),\n",
+    "    v2.ToDtype(torch.float32, scale=True),\n",
+    "    v2.RandomRotation(30),\n",
+    "    v2.ElasticTransform(alpha=350.0),\n",
+    "    v2.Normalize(mean=[0.5], std=[0.5])\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -48,14 +53,17 @@
        "    Root location: data\n",
        "    StandardTransform\n",
        "Transform: Compose(\n",
-       "               ToTensor()\n",
-       "               Grayscale(num_output_channels=1)\n",
-       "               RandomRotation(degrees=[-30.0, 30.0], interpolation=nearest, expand=False, fill=0)\n",
-       "               Normalize(mean=(0.5,), std=0.5)\n",
+       "                 Grayscale(num_output_channels=1)\n",
+       "                 Resize(size=[128, 128], interpolation=InterpolationMode.BILINEAR, antialias=True)\n",
+       "                 ToImage()\n",
+       "                 ToDtype(scale=True)\n",
+       "                 RandomRotation(degrees=[-30.0, 30.0], interpolation=InterpolationMode.NEAREST, expand=False, fill=0)\n",
+       "                 ElasticTransform(alpha=[350.0, 350.0], sigma=[5.0, 5.0], interpolation=InterpolationMode.BILINEAR, fill=0)\n",
+       "                 Normalize(mean=[0.5], std=[0.5], inplace=False)\n",
        "           )"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +95,7 @@
        "597"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,16 +153,39 @@
     "        self.conv1 = nn.Conv2d(1, 32, kernel_size=3, padding=1)\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
-    "        self.fc1 = nn.Linear(64 * 16 * 16, 128)\n",
+    "        self.adative_pool = nn.AdaptiveMaxPool2d((8, 8))\n",
+    "        self.fc1 = nn.Linear(64 * 37 * 37, 128)\n",
     "        self.fc2 = nn.Linear(128, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.pool(F.relu(self.conv1(x)))\n",
     "        x = self.pool(F.relu(self.conv2(x)))\n",
-    "        x = x.view(-1, 64 * 37 * 37)\n",
+    "        x = torch.flatten(x, 1)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.fc2(x)\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output: torch.Size([1, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = CNN(num_classes=2)\n",
+    "\n",
+    "dummy = torch.randn(1, 1, 150, 150)\n",
+    "out = model(dummy)\n",
+    "\n",
+    "print(\"Output:\", out.shape)"
    ]
   },
   {
