--- a/galaxy star classifier.ipynb
+++ b/galaxy star classifier.ipynb
@@ -194,6 +194,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = F.binary_cross_entropy()"
+   ]
   }
  ],
  "metadata": {
