--- a/galaxy star classifier.ipynb
+++ b/galaxy star classifier.ipynb
@@ -8,12 +8,12 @@
    "source": [
     "import torch\n",
     "from torchvision import datasets\n",
+    "from torchvision import transforms\n",
     "from torchvision.transforms import v2\n",
     "from torch.utils.data import DataLoader, random_split\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import matplotlib.pyplot as plt\n",
-    "from PIL import Image"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -24,18 +24,14 @@
    "source": [
     "transform = v2.Compose([\n",
     "    v2.Grayscale(num_output_channels=1),\n",
-    "    v2.Resize((128, 128)),\n",
     "    v2.ToImage(),\n",
-    "    v2.ToDtype(torch.float32, scale=True),\n",
-    "    v2.RandomRotation(30),\n",
-    "    v2.ElasticTransform(alpha=350.0),\n",
-    "    v2.Normalize(mean=[0.5], std=[0.5])\n",
+    "    v2.ToDtype(torch.float32, scale=True)\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +42,103 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader_noNorm = DataLoader(dataset, batch_size=64, shuffle=False, num_workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_sum = torch.zeros(1)\n",
+    "total_sqsum = torch.zeros(1)\n",
+    "total_pixels = 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for images, labels in dataloader_noNorm:\n",
+    "        b = images.shape[0]\n",
+    "        c = images.shape[1]\n",
+    "        h = images.shape[2]\n",
+    "        w = images.shape[3]\n",
+    "\n",
+    "        sum_batch = torch.sum(images, dim=(0, 2, 3))\n",
+    "        sqsum_batch = torch.sum(images**2, dim=(0, 2, 3))\n",
+    "        pixels_batch = b * h * w\n",
+    "\n",
+    "        total_sum += sum_batch\n",
+    "        total_sqsum += sqsum_batch\n",
+    "        total_pixels += pixels_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média:  0.3573446571826935\n",
+      "Desvio padrão:  0.14582973718643188\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = total_sum / total_pixels\n",
+    "var = total_sqsum / total_pixels - mean**2\n",
+    "std = torch.sqrt(var)\n",
+    "\n",
+    "print(\"Média: \", mean.item())\n",
+    "print(\"Desvio padrão: \", std.item())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = mean.item()\n",
+    "s = std.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transform = v2.Compose([\n",
+    "    v2.Grayscale(num_output_channels=1),\n",
+    "    v2.ToImage(),\n",
+    "    v2.ToDtype(torch.float32, scale=True),\n",
+    "    v2.Normalize(mean=[m], std=[s])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_transform = v2.Compose([\n",
+    "    v2.Grayscale(num_output_channels=1),\n",
+    "    v2.Resize((128, 128)),\n",
+    "    v2.ToImage(),\n",
+    "    v2.ToDtype(torch.float32, scale=True),\n",
+    "    v2.Normalize(mean=[m], std=[s])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -53,7 +146,7 @@
        "['galaxy', 'star']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,11 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "totalsize = len(dataset)\n",
+    "train_dataset = datasets.ImageFolder(root='data', transform=train_transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "totalsize = len(train_dataset)\n",
     "train_size = int(0.7 * totalsize)\n",
     "val_size = int(0.15 * totalsize)\n",
     "test_size = totalsize - train_size - val_size"
@@ -76,44 +178,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f'{totalsize}{train_size}{val_size}{test_size}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"f'{totalsize}{train_size}{val_size}{test_size}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df, val_df, test_df = random_split(dataset,[train_size, val_size, test_size])"
+    "train_df, val_df, test_df = random_split(train_dataset,[train_size, val_size, test_size], torch.Generator().manual_seed(42))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = DataLoader(train_df, batch_size=32, shuffle=True)\n",
-    "val_loader = DataLoader(val_df, batch_size=32, shuffle=False)\n",
-    "test_loader = DataLoader(test_df, batch_size=32, shuffle=False)"
+    "train_loader = DataLoader(train_df, batch_size=32, shuffle=True, num_workers=4)\n",
+    "val_loader = DataLoader(val_df, batch_size=32, shuffle=False, num_workers=4)\n",
+    "test_loader = DataLoader(test_df, batch_size=32, shuffle=False, num_workers=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +215,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média batch:  0.0726\n",
+      "Desvio padrão batch: 1.0696\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "it_loader = iter(train_loader)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    images, labels = next(it_loader)\n",
+    "    mean_batch = images.mean(dim=(0, 2, 3))\n",
+    "    std_batch = images.std(dim=(0, 2, 3), unbiased=False)\n",
+    "\n",
+    "    print(f\"Média batch:  {mean_batch.item():.4f}\")\n",
+    "    print(f\"Desvio padrão batch: {std_batch.item():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.4504237174987793 4.406888484954834\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(images.min().item(), images.max().item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transform = v2.Compose([\n",
+    "    v2.Grayscale(num_output_channels=1,\n",
+    "                 v2.)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,23 +330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Geração [1/10] Loss: 0.6709 Acurácia: 75.98%\n",
-      "Geração [2/10] Loss: 0.4780 Acurácia: 76.34%\n",
-      "Geração [3/10] Loss: 0.4657 Acurácia: 77.55%\n",
-      "Geração [4/10] Loss: 0.4669 Acurácia: 76.77%\n",
-      "Geração [5/10] Loss: 0.4547 Acurácia: 78.81%\n",
-      "Geração [6/10] Loss: 0.4609 Acurácia: 77.84%\n",
-      "Geração [7/10] Loss: 0.4513 Acurácia: 79.42%\n",
-      "Geração [8/10] Loss: 0.4654 Acurácia: 77.81%\n",
-      "Geração [9/10] Loss: 0.4387 Acurácia: 79.53%\n",
-      "Geração [10/10] Loss: 0.4460 Acurácia: 79.49%\n"
+      "Geração [1/10] Loss: 0.5948 Acurácia: 75.80%\n",
+      "Geração [2/10] Loss: 0.5377 Acurácia: 76.30%\n",
+      "Geração [3/10] Loss: 0.5291 Acurácia: 76.12%\n",
+      "Geração [4/10] Loss: 0.5252 Acurácia: 76.30%\n",
+      "Geração [5/10] Loss: 0.4894 Acurácia: 76.30%\n",
+      "Geração [6/10] Loss: 0.4232 Acurácia: 80.06%\n",
+      "Geração [7/10] Loss: 0.3681 Acurácia: 83.11%\n",
+      "Geração [8/10] Loss: 0.3412 Acurácia: 85.48%\n",
+      "Geração [9/10] Loss: 0.3309 Acurácia: 85.87%\n",
+      "Geração [10/10] Loss: 0.3211 Acurácia: 86.55%\n"
      ]
     }
    ],
@@ -239,23 +380,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = v2.Compose([\n",
-    "    v2.Resize((128, 128)),\n",
-    "    v2.ToImage(),\n",
-    "    v2.ToDtype(torch.float32, scale=True),\n",
-    "    v2.RandomHorizontalFlip(0.5),\n",
-    "    v2.ElasticTransform(alpha=350.0),\n",
-    "    v2.CenterCrop(50),\n",
-    "    v2.Normalize(mean=[0.5], std=[0.5])\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class CNN_2(nn.Module):\n",
     "    def __init__(self, num_classes):\n",
     "        super(CNN_2, self).__init__()\n",
@@ -278,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -300,6 +424,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -307,16 +440,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Geração [1/10] Loss: 0.7595 Acurácia: 23.59%\n",
-      "Geração [2/10] Loss: 0.7602 Acurácia: 23.59%\n",
-      "Geração [3/10] Loss: 0.7592 Acurácia: 23.59%\n",
-      "Geração [4/10] Loss: 0.7592 Acurácia: 23.59%\n",
-      "Geração [5/10] Loss: 0.7606 Acurácia: 23.59%\n",
-      "Geração [6/10] Loss: 0.7602 Acurácia: 23.59%\n",
-      "Geração [7/10] Loss: 0.7598 Acurácia: 23.59%\n",
-      "Geração [8/10] Loss: 0.7600 Acurácia: 23.59%\n",
-      "Geração [9/10] Loss: 0.7604 Acurácia: 23.59%\n",
-      "Geração [10/10] Loss: 0.7607 Acurácia: 23.59%\n"
+      "Geração [1/10] Loss: 0.6833 Acurácia: 76.30%\n",
+      "Geração [2/10] Loss: 0.6834 Acurácia: 76.30%\n",
+      "Geração [3/10] Loss: 0.6833 Acurácia: 76.30%\n",
+      "Geração [4/10] Loss: 0.6834 Acurácia: 76.30%\n",
+      "Geração [5/10] Loss: 0.6833 Acurácia: 76.30%\n",
+      "Geração [6/10] Loss: 0.6833 Acurácia: 76.30%\n",
+      "Geração [7/10] Loss: 0.6833 Acurácia: 76.30%\n",
+      "Geração [8/10] Loss: 0.6833 Acurácia: 76.30%\n",
+      "Geração [9/10] Loss: 0.6833 Acurácia: 76.30%\n",
+      "Geração [10/10] Loss: 0.6834 Acurácia: 76.30%\n"
      ]
     }
    ],
@@ -344,13 +477,6 @@
     "    epoch_acc = 100 * correct / total\n",
     "    print(f\"Geração [{epoch+1}/{num_epochs}] Loss: {epoch_loss:.4f} Acurácia: {epoch_acc:.2f}%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
