--- a/galaxy star classifier.ipynb
+++ b/galaxy star classifier.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "(np.float64(-0.5), np.float64(63.5), np.float64(63.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "(np.float64(-0.5), np.float64(63.5), np.float64(63.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "['galaxy', 'star']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -357,19 +357,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_transform = v2.Compose([\n",
-    "    v2.Grayscale(num_output_channels=1,\n",
-    "                 v2.)\n",
+    "    v2.Grayscale(num_output_channels=1),\n",
+    "    v2.Resize((128,128)),\n",
+    "    v2.RandomHorizontalFlip(0.5),\n",
+    "    v2.RandomRotation(degrees=10),\n",
+    "    v2.RandomResizedCrop(size=(128,128), scale=(0.9, 1.0), ratio=(0.98, 1.02)),\n",
+    "    v2.ToImage(),\n",
+    "    v2.ToDtype(torch.float32, scale=True),\n",
+    "    v2.Normalize(mean=[m], std=[s]),\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,23 +434,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Geração [1/10] Loss: 0.5948 Acurácia: 75.80%\n",
-      "Geração [2/10] Loss: 0.5377 Acurácia: 76.30%\n",
-      "Geração [3/10] Loss: 0.5291 Acurácia: 76.12%\n",
-      "Geração [4/10] Loss: 0.5252 Acurácia: 76.30%\n",
-      "Geração [5/10] Loss: 0.4894 Acurácia: 76.30%\n",
-      "Geração [6/10] Loss: 0.4232 Acurácia: 80.06%\n",
-      "Geração [7/10] Loss: 0.3681 Acurácia: 83.11%\n",
-      "Geração [8/10] Loss: 0.3412 Acurácia: 85.48%\n",
-      "Geração [9/10] Loss: 0.3309 Acurácia: 85.87%\n",
-      "Geração [10/10] Loss: 0.3211 Acurácia: 86.55%\n"
+      "Geração [1/10] Loss: 0.8898 Acurácia: 74.76%\n",
+      "Geração [2/10] Loss: 0.5451 Acurácia: 76.30%\n",
+      "Geração [3/10] Loss: 0.5459 Acurácia: 76.30%\n",
+      "Geração [4/10] Loss: 0.5523 Acurácia: 76.30%\n",
+      "Geração [5/10] Loss: 0.5539 Acurácia: 76.30%\n",
+      "Geração [6/10] Loss: 0.5467 Acurácia: 76.30%\n",
+      "Geração [7/10] Loss: 0.5503 Acurácia: 76.30%\n",
+      "Geração [8/10] Loss: 0.5464 Acurácia: 76.30%\n",
+      "Geração [9/10] Loss: 0.5517 Acurácia: 76.30%\n",
+      "Geração [10/10] Loss: 0.5476 Acurácia: 76.30%\n"
      ]
     }
    ],
@@ -474,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,23 +537,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Geração [1/10] Loss: 0.6833 Acurácia: 76.30%\n",
-      "Geração [2/10] Loss: 0.6834 Acurácia: 76.30%\n",
-      "Geração [3/10] Loss: 0.6833 Acurácia: 76.30%\n",
-      "Geração [4/10] Loss: 0.6834 Acurácia: 76.30%\n",
-      "Geração [5/10] Loss: 0.6833 Acurácia: 76.30%\n",
-      "Geração [6/10] Loss: 0.6833 Acurácia: 76.30%\n",
-      "Geração [7/10] Loss: 0.6833 Acurácia: 76.30%\n",
-      "Geração [8/10] Loss: 0.6833 Acurácia: 76.30%\n",
-      "Geração [9/10] Loss: 0.6833 Acurácia: 76.30%\n",
-      "Geração [10/10] Loss: 0.6834 Acurácia: 76.30%\n"
+      "Geração [1/10] Loss: 0.7985 Acurácia: 23.70%\n",
+      "Geração [2/10] Loss: 0.7977 Acurácia: 23.70%\n",
+      "Geração [3/10] Loss: 0.7965 Acurácia: 23.70%\n",
+      "Geração [4/10] Loss: 0.7974 Acurácia: 23.70%\n",
+      "Geração [5/10] Loss: 0.7979 Acurácia: 23.70%\n",
+      "Geração [6/10] Loss: 0.7967 Acurácia: 23.70%\n",
+      "Geração [7/10] Loss: 0.7971 Acurácia: 23.70%\n",
+      "Geração [8/10] Loss: 0.7978 Acurácia: 23.70%\n",
+      "Geração [9/10] Loss: 0.7965 Acurácia: 23.70%\n",
+      "Geração [10/10] Loss: 0.7977 Acurácia: 23.70%\n"
      ]
     }
    ],
